[gd_scene load_steps=7 format=3 uid="uid://b28vj6axvtriu"]

[ext_resource type="Texture2D" uid="uid://c7k408j2h2bbw" path="res://صور الحركة/left.png" id="1_svdgb"]
[ext_resource type="Script" uid="uid://8y51kaiqq8a6" path="res://mobile_controls.gd" id="1_ui5ya"]
[ext_resource type="Texture2D" uid="uid://c6ju6jxkokcfn" path="res://صور الحركة/Generated Image December 17, 2025 - 5_57PM.png" id="2_ui5ya"]
[ext_resource type="Texture2D" uid="uid://nbt2s3dpcydr" path="res://صور الحركة/Generated Image December 17, 2025 - 6_34PM.png" id="3_s3714"]
[ext_resource type="Texture2D" uid="uid://ddymyu0tbrix7" path="res://صور الحركة/Generated Image December 17, 2025 - 6_18PM.png" id="4_wlcjf"]
[ext_resource type="Texture2D" uid="uid://dec11evev7mpi" path="res://صور الحركة/Generated Image December 17, 2025 - 6_01PM.png" id="5_2b8le"]

[node name="MobileControls" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ui5ya")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="MovementGroup" type="Control" parent="Control"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2

[node name="LeftButton" type="TouchScreenButton" parent="Control/MovementGroup"]
position = Vector2(15.000001, 131.99998)
scale = Vector2(0.1, 0.08)
texture_normal = ExtResource("1_svdgb")
action = "ui_left"

[node name="RightButton" type="TouchScreenButton" parent="Control/MovementGroup"]
position = Vector2(166, 132)
scale = Vector2(0.10146891, 0.08)
texture_normal = ExtResource("2_ui5ya")
action = "ui_right"

[node name="Control" type="Control" parent="Control"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="JumpButton" type="TouchScreenButton" parent="Control/Control"]
position = Vector2(-273.00003, 212)
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("3_s3714")
action = "jump"

[node name="AttackButton" type="TouchScreenButton" parent="Control/Control"]
position = Vector2(-131.99998, 192.00002)
scale = Vector2(0.14, 0.14)
texture_normal = ExtResource("4_wlcjf")
action = "attack"

[node name="DodgeButton" type="TouchScreenButton" parent="Control/Control"]
position = Vector2(-122.99997, 41)
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("5_2b8le")
action = "dodge"
