

extends CanvasLayer

# --- ๐๏ธ ูุณู ุชุนุฑููุงุช ุงูุฃุฒุฑุงุฑ ุจุงุณุชุฎุฏุงู $ (ุชุฃูุฏ ูู ูุทุงุจูุฉ ุงูุฃุณูุงุก ูู ุดุฌุฑุฉ ุงูุนูุฏ) ---

@onready var left_button    = $Control/MovementGroup/LeftButton    # ุฒุฑ ุงูุญุฑูุฉ ูููุณุงุฑ
@onready var right_button   = $Control/MovementGroup/RightButton  # ุฒุฑ ุงูุญุฑูุฉ ูููููู
@onready var attack_button  = $Control/Control/AttackButton # ุฒุฑ ุงููุฌูู (ุณูู)
@onready var dodge_button   = $Control/Control/DodgeButton   # ุฒุฑ ุงูุฏูุฏุฌ (ููู ุงููุฌูู)
@onready var jump_button    = $Control/Control/JumpButton   # ุฒุฑ ุงูููุฒ (ูุณุงุฑ ุงููุฌูู)

# --- โ๏ธ ุฃุณูุงุก ุงูู Actions (ูุฌุจ ุฃู ุชุทุงุจู ุงูู Input Map) ---
const ACTION_LEFT   = "ui_left"
const ACTION_RIGHT  = "ui_right"
const ACTION_ATTACK = "attack"
const ACTION_DODGE  = "dodge"
const ACTION_JUMP   = "jump"

# --- ๐จ ุฅุนุฏุงุฏุงุช ุงููุธูุฑ ---
const NORMAL_OPACITY = 0.5  # ุงูุดูุงููุฉ ูู ุงูุญุงูุฉ ุงูุนุงุฏูุฉ
const PRESSED_OPACITY = 1.0 # ุงูุดูุงููุฉ ุนูุฏ ุงูุถุบุท
const TWEEN_SPEED = 0.1     # ุณุฑุนุฉ ุงูุฃูููุดู

func _ready():
	# ุฑุจุท ุงูุฃุฒุฑุงุฑ ุงููุนุฑูุฉ ุจู $ ุจุงููุธุงุฆู
	var buttons = [left_button, right_button, attack_button, dodge_button, jump_button]
	
	for btn in buttons:
		if is_instance_valid(btn) and btn is TouchScreenButton:
			_setup_button(btn)
		else:
			push_warning("MobileControls: ุฃุญุฏ ุงูุฃุฒุฑุงุฑ ุบูุฑ ููุฌูุฏุ ุชุฃูุฏ ูู ูุทุงุจูุฉ ุงูุฃุณูุงุก ุจุนุฏ ุนูุงูุฉ $")

func _setup_button(btn: TouchScreenButton):
	# ุถุจุท ุงูุดูุงููุฉ ุงูุฃูููุฉ ููุท (ุจุฏูู ุชุบููุฑ ุงูู Scale ููุญูุงุธ ุนูู ุญุฌูู ุงููุฏูู)
	btn.self_modulate.a = NORMAL_OPACITY
	
	# ุฑุจุท ุงูุฅุดุงุฑุงุช
	btn.pressed.connect(_on_pressed.bind(btn))
	btn.released.connect(_on_released.bind(btn))

# --- โจ ุชุฃุซูุฑุงุช ุจุตุฑูุฉ ุนูุฏ ุงูุถุบุท (ุดูุงููุฉ ููุท) ---

func _on_pressed(btn: TouchScreenButton):
	var tween = create_tween()
	# ุชุบููุฑ ุงูุดูุงููุฉ ูุชุตุจุญ ุฃูุถุญ ุนูุฏ ุงูุถุบุท
	tween.tween_property(btn, "self_modulate:a", PRESSED_OPACITY, TWEEN_SPEED)

func _on_released(btn: TouchScreenButton):
	var tween = create_tween()
	# ุงูุนูุฏุฉ ููุดูุงููุฉ ุงูุฃุตููุฉ ุนูุฏ ุชุฑู ุงูุฒุฑ
	tween.tween_property(btn, "self_modulate:a", NORMAL_OPACITY, TWEEN_SPEED)
